--- a/src/prototyping.ipynb
+++ b/src/prototyping.ipynb
@@ -6,7 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
     "import itertools\n",
     "\n",
     "from torch.utils.data import DataLoader, random_split\n",
@@ -157,6 +156,16 @@
     }
    ],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 24.01.2024\n",
+    "\n",
+    "- PLGrid -> jak wrzucic dataset?\n",
+    "- Wniosek o temat pracy (do dnia 29.02.2024 włącznie ~Ewa Lanoszka)"
+   ]
   }
  ],
  "metadata": {
