--- a/vit/vit-gan.ipynb
+++ b/vit/vit-gan.ipynb
@@ -659,8 +659,8 @@
     "finally:\n",
     "    save_model(save_interval=None)\n",
     "    save_sample_of_generator_progress(save_interval=None)\n",
-    "    save_animation()\n",
-    "    plot_losses()"
+    "    plot_losses()\n",
+    "    save_animation()"
    ]
   },
   {
