--- a/vit/vit-gan.ipynb
+++ b/vit/vit-gan.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,28 +143,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz to ../data/cifar10\\cifar-10-python.tar.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100.0%\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting ../data/cifar10\\cifar-10-python.tar.gz to ../data/cifar10\n",
+      "Files already downloaded and verified\n",
       "Files already downloaded and verified\n",
       "Feature batch shape: torch.Size([128, 3, 32, 32])\n",
       "Labels batch shape: torch.Size([128])\n"
@@ -230,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +500,10 @@
     "        result = self.Transformer_Encoder(img_patches)\n",
     "        logits = self.mlp_head(result[:, 0, :])\n",
     "        logits = nn.Sigmoid()(logits)\n",
-    "        return logits"
+    "        return logits\n",
+    "\n",
+    "generator = Generator(initialize_size=8, dropout=0.1)\n",
+    "discriminator = Discriminator(patch_size=8, dropout=0.1)"
    ]
   },
   {
@@ -526,25 +515,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'generator' is not defined",
+     "evalue": "name 'checkpoints_directory' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 136\u001b[0m\n\u001b[0;32m    131\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m    132\u001b[0m     (\n\u001b[0;32m    133\u001b[0m         today_directory,\n\u001b[0;32m    134\u001b[0m         checkpoints_directory,\n\u001b[0;32m    135\u001b[0m         generated_images_directory,\n\u001b[1;32m--> 136\u001b[0m     ) \u001b[38;5;241m=\u001b[39m \u001b[43mcreate_output_bucket\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    137\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mStarting the training loop...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "Cell \u001b[1;32mIn[9], line 121\u001b[0m, in \u001b[0;36mcreate_output_bucket\u001b[1;34m()\u001b[0m\n\u001b[0;32m    120\u001b[0m generated_images_directory \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtoday_directory\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/generated_images\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m--> 121\u001b[0m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmakedirs\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtoday_directory\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mexist_ok\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[0;32m    122\u001b[0m os\u001b[38;5;241m.\u001b[39mmakedirs(checkpoints_directory, exist_ok\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "Cell \u001b[1;32mIn[26], line 136\u001b[0m\n\u001b[0;32m    131\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m    132\u001b[0m     (\n\u001b[0;32m    133\u001b[0m         today_directory,\n\u001b[0;32m    134\u001b[0m         checkpoints_directory,\n\u001b[0;32m    135\u001b[0m         generated_images_directory,\n\u001b[1;32m--> 136\u001b[0m     ) \u001b[38;5;241m=\u001b[39m \u001b[43mcreate_output_bucket\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    137\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mStarting the training loop...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[26], line 121\u001b[0m, in \u001b[0;36mcreate_output_bucket\u001b[1;34m()\u001b[0m\n\u001b[0;32m    120\u001b[0m generated_images_directory \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtoday_directory\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/generated_images\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m--> 121\u001b[0m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmakedirs\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtoday_directory\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mexist_ok\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[0;32m    122\u001b[0m os\u001b[38;5;241m.\u001b[39mmakedirs(checkpoints_directory, exist_ok\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
       "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python310\\lib\\os.py:225\u001b[0m, in \u001b[0;36mmakedirs\u001b[1;34m(name, mode, exist_ok)\u001b[0m\n\u001b[0;32m    224\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 225\u001b[0m     \u001b[43mmkdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmode\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    226\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mOSError\u001b[39;00m:\n\u001b[0;32m    227\u001b[0m     \u001b[38;5;66;03m# Cannot rely on checking for EEXIST, since the operating system\u001b[39;00m\n\u001b[0;32m    228\u001b[0m     \u001b[38;5;66;03m# could give priority to other errors like EACCES or EROFS\u001b[39;00m\n",
-      "\u001b[1;31mOSError\u001b[0m: [WinError 123] The filename, directory name, or volume label syntax is incorrect: 'output/17-05-2024_00:49:28'",
+      "\u001b[1;31mOSError\u001b[0m: [WinError 123] The filename, directory name, or volume label syntax is incorrect: 'output/17-05-2024_00:51:24'",
       "\nDuring handling of the above exception, another exception occurred:\n",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 151\u001b[0m\n\u001b[0;32m    149\u001b[0m     \u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m\n\u001b[0;32m    150\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m--> 151\u001b[0m     \u001b[43msave_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43msave_interval\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[0;32m    152\u001b[0m     save_sample_of_generator_progress(save_interval\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[0;32m    153\u001b[0m     plot_losses()\n",
-      "Cell \u001b[1;32mIn[9], line 84\u001b[0m, in \u001b[0;36msave_model\u001b[1;34m(save_interval)\u001b[0m\n\u001b[0;32m     81\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msave_model\u001b[39m(save_interval: \u001b[38;5;28mint\u001b[39m \u001b[38;5;241m|\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[0;32m     82\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m save_interval \u001b[38;5;129;01mor\u001b[39;00m is_xth_or_last_epoch(x\u001b[38;5;241m=\u001b[39msave_interval):\n\u001b[0;32m     83\u001b[0m         torch\u001b[38;5;241m.\u001b[39msave(\n\u001b[1;32m---> 84\u001b[0m             \u001b[43mgenerator\u001b[49m\u001b[38;5;241m.\u001b[39mstate_dict(),\n\u001b[0;32m     85\u001b[0m             \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcheckpoints_directory\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/generator_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00miterations_passed\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mif\u001b[39;00m\u001b[38;5;250m \u001b[39msave_interval\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01melse\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mon_quit\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.pth\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m     86\u001b[0m         )\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'generator' is not defined"
+      "Cell \u001b[1;32mIn[26], line 151\u001b[0m\n\u001b[0;32m    149\u001b[0m     \u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m\n\u001b[0;32m    150\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m--> 151\u001b[0m     \u001b[43msave_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43msave_interval\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[0;32m    152\u001b[0m     save_sample_of_generator_progress(save_interval\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[0;32m    153\u001b[0m     plot_losses()\n",
+      "Cell \u001b[1;32mIn[26], line 85\u001b[0m, in \u001b[0;36msave_model\u001b[1;34m(save_interval)\u001b[0m\n\u001b[0;32m     81\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msave_model\u001b[39m(save_interval: \u001b[38;5;28mint\u001b[39m \u001b[38;5;241m|\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[0;32m     82\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m save_interval \u001b[38;5;129;01mor\u001b[39;00m is_xth_or_last_epoch(x\u001b[38;5;241m=\u001b[39msave_interval):\n\u001b[0;32m     83\u001b[0m         torch\u001b[38;5;241m.\u001b[39msave(\n\u001b[0;32m     84\u001b[0m             generator\u001b[38;5;241m.\u001b[39mstate_dict(),\n\u001b[1;32m---> 85\u001b[0m             \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mcheckpoints_directory\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/generator_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00miterations_passed\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mif\u001b[39;00m\u001b[38;5;250m \u001b[39msave_interval\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01melse\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mon_quit\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.pth\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m     86\u001b[0m         )\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'checkpoints_directory' is not defined"
      ]
     }
    ],
